--- a/src/global.css
+++ b/src/global.css
@@ -1,115 +1,108 @@
-/* https://fonts.googleapis.com/css?family=Roboto:100 */
-/* cyrillic-ext */
-@font-face {
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 100;
-  src: local('Roboto Thin'), local('Roboto-Thin'),
-    url(fonts/KFOkCnqEu92Fr1MmgVxFIzIXKMnyrYk.woff2) format('woff2');
-  unicode-range: U + 0460-052f, U + 1c80-1c88, U + 20b4, U + 2de0-2dff,
-    U + A640-A69F, U + FE2E-FE2F;
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
-/* cyrillic */
-@font-face {
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 100;
-  src: local('Roboto Thin'), local('Roboto-Thin'),
-    url(fonts/KFOkCnqEu92Fr1MmgVxMIzIXKMnyrYk.woff2) format('woff2');
-  unicode-range: U + 0400-045f, U + 0490-0491, U + 04b0-04b1, U + 2116;
-}
-/* greek-ext */
-@font-face {
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 100;
-  src: local('Roboto Thin'), local('Roboto-Thin'),
-    url(fonts/KFOkCnqEu92Fr1MmgVxEIzIXKMnyrYk.woff2) format('woff2');
-  unicode-range: U + 1f00-1fff;
-}
-/* greek */
-@font-face {
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 100;
-  src: local('Roboto Thin'), local('Roboto-Thin'),
-    url(fonts/KFOkCnqEu92Fr1MmgVxLIzIXKMnyrYk.woff2) format('woff2');
-  unicode-range: U + 0370-03ff;
-}
-/* vietnamese */
-@font-face {
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 100;
-  src: local('Roboto Thin'), local('Roboto-Thin'),
-    url(fonts/KFOkCnqEu92Fr1MmgVxHIzIXKMnyrYk.woff2) format('woff2');
-  unicode-range: U + 0102-0103, U + 0110-0111, U + 1ea0-1ef9, U + 20ab;
-}
-/* latin-ext */
-@font-face {
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 100;
-  src: local('Roboto Thin'), local('Roboto-Thin'),
-    url(fonts/KFOkCnqEu92Fr1MmgVxGIzIXKMnyrYk.woff2) format('woff2');
-  unicode-range: U + 0100-024f, U + 0259, U + 1-1eff, U + 2020, U + 20a0-20ab,
-    U + 20ad-20cf, U + 2113, U + 2c60-2c7f, U + A720-A7FF;
-}
-/* latin */
-@font-face {
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 100;
-  src: local('Roboto Thin'), local('Roboto-Thin'),
-    url(fonts/KFOkCnqEu92Fr1MmgVxIIzIXKMny.woff2) format('woff2');
-  unicode-range: U + 0000-00ff, U + 0131, U + 0152-0153, U + 02bb-02bc, U + 02c6,
-    U + 02da, U + 02dc, U + 2000-206f, U + 2074, U + 20ac, U + 2122, U + 2191,
-    U + 2193, U + 2212, U + 2215, U + FEFF, U + FFFD;
-}
-
-/*  */
-html {
-  box-sizing: border-box;
-  height: 100%;
-}
-*,
-*:before,
-*:after {
-  box-sizing: inherit;
+* {
+  font-family: 'Verdana', cursive, sans-serif;
+  color: #ffffff;
 }
 
 body {
-  margin: 0;
-  font: 100 14px 'Roboto';
-  height: 100%;
+  background-color: #7cc6fe;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+}
+
+.app {
+  background-color: #252d4a;
+  width: 450px;
+  min-height: 200px;
+  height: min-content;
+  border-radius: 15px;
+  padding: 20px;
+  box-shadow: 10px 10px 42px 0px rgba(0, 0, 0, 0.75);
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.score-section {
+  display: flex;
+  font-size: 24px;
+  align-items: center;
+}
+
+/* QUESTION/TIMER/LEFT SECTION */
+.question-section {
+  width: 100%;
+  position: relative;
+}
+
+.question-count {
+  margin-bottom: 20px;
+}
+
+.question-count span {
+  font-size: 28px;
+}
+
+.question-text {
+  margin-bottom: 12px;
+}
+
+.timer-text {
+  background: rgb(230, 153, 12);
+  padding: 15px;
+  margin-top: 20px;
+  margin-right: 20px;
+  border: 5px solid rgb(255, 189, 67);
+  border-radius: 15px;
+  text-align: center;
+}
+
+/* ANSWERS/RIGHT SECTION */
+.answer-section {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 button {
-  display: block;
-  background: none;
-  border: none;
-  padding: 0;
-  font-family: inherit;
-  user-select: none;
-  cursor: pointer;
-  outline: none;
-
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-}
-
-button:active {
-  box-shadow: inset 0px 0px 80px 0px rgba(0, 0, 0, 0.25);
-}
-
-#wrapper {
-  height: 100%;
-}
-
-#app {
-  height: 100%;
-  position: relative;
+  width: 100%;
+  font-size: 16px;
+  color: #ffffff;
+  background-color: #252d4a;
+  border-radius: 15px;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  padding: 5px;
+  justify-content: flex-start;
   align-items: center;
+  border: 5px solid #234668;
+  cursor: pointer;
+}
+
+.correct {
+  background-color: #2f922f;
+}
+
+.incorrect {
+  background-color: #ff3333;
+}
+
+button:hover {
+  background-color: #555e7d;
+}
+
+button:focus {
+  outline: none;
+}
+
+button svg {
+  margin-right: 5px;
 }
